--- a/index.html
+++ b/index.html
@@ -207,11 +207,23 @@
                     </div>
                     <div class="experience-grid">
                         <div class="col1">
-                            <div>Apr, 2018 - </div>
-                            <div>Jul, 2018</div>
+                            <div>Apr, 2010 - </div>
+                            <div>Apr, 2011</div>
                         </div>
                         <div class="col2">
-                            <div class="col2-title">HIGH SCHOOL | Hindu Kanya Collegiate School.</div>
+                            <div class="col2-title">B.SC(Computer Science)| Khalsa College</div>
+                            <div class="col2-location">India</div>
+                            <ul>
+                                <li>Major: mathematics, physics, chemistry </li>
+                            </ul>
+                    </div>
+                    <div class="experience-grid">
+                        <div class="col1">
+                            <div>Mar, 2009 - </div>
+                            <div>Apr, 2010</div>
+                        </div>
+                        <div class="col2">
+                            <div class="col2-title">HIGH SCHOOL | Hindu Kanya Collegiate School</div>
                             <div class="col2-location">India</div>
                             <ul>
                                 <li>Major: mathematics, physics, chemistry </li>
