--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="sidebar-item">
                     <div class="sidebar-item-title">Email</div>
                     <div class="sidebar-item-subtitle">
-                        <a style="color:peachpuff;" href="mailto:cartersteinhoff@gmail.com">gunnypari@gmail.com</a>
+                        <a style="color:peachpuff;" href="mailto:gunnypari@gmail.com">gunnypari@gmail.com</a>
                     </div>
                 </div>
                 <div class="sidebar-item">
