--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </div>
                         <div class="col2">
                             <div class="col2-title">Wells Fargo | Teller / CSR</div>
-                            <div class="col2-location">Bellevue, WA</div>
+                            <div class="col2-location">Kirkland, WA</div>
                             <ul>
                                 <li>Process deposits, withdrawals and other banking transactions for a high volume of customers. </li>
                                 <li>Providing excellent customer service, processing account transactions effectively.</li>
