--- a/index.html
+++ b/index.html
@@ -35,23 +35,20 @@
                 </div>
                 <div class="sidebar-title">Software</div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">HTML / CSS / LESS / Sass </div>
+                    <div class="sidebar-item-title">HTML / CSS / LESS / SASS/ jQuery / VirtualEnv</div>
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">Python / Django</div>
+                    <div class="sidebar-item-title">Python / C# / MEAN-Stack</div>
                     
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">Jquery / Javascript </div>
+                    <div class="sidebar-item-title">Django / Bootstrap / Materialize / .NET Core / ASP.NET</div>
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">MEAN Stack </div>
+                    <div class="sidebar-item-title">MVC / OOP / API's / AJAX </div>
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">C# / .NET core </div>
-                </div>
-                <div class="sidebar-item">
-                    <div class="sidebar-item-title">MongoDB, Express.JS, Angular, and NodeJS. </div>
+                    <div class="sidebar-item-title">MySQL / PostgresSQL / MongoDB / Microsoft SQL</div>
                 </div>
                 <div class="sidebar-title">Skills</div>
                 <div class="sidebar-item">
@@ -117,9 +114,11 @@
                     <div class="experience-grid">
                             <div class="col1"></div>
                             <div class="col2">
-                                <div class="col2-title">Python - Black Belt (Coding-Dojo)</div>
-                                <div class="col2-title">C# - Red Belt (Coding-Dojo)</div>
-                                <div class="col2-title">MEAN-Stack - Red Belt (Coding-Dojo)</div>
+                                <ul>
+                                    <li>Python - Black Belt (Coding-Dojo)</li>
+                                    <li>C# - Red Belt (Coding-Dojo)</li>
+                                    <li>MEAN-Stack - Red Belt (Coding-Dojo)</li>
+                                </ul>
                             </div>
                     </div>
                     <div class="main-item-title">Projects</div>
