--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     </div>
                     <div class="experience-grid">
                         <div class="col1">
-                            <div>7+ Year</div>
+                            <div>7+ Years</div>
                         </div>
                         <div class="col2">
                             <div class="col2-title">Customer Service and Accountant</div>
