--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                             <div>1 Year</div>
                         </div>
                         <div class="col2">
-                            <div class="col2-title">Development Experience</div>
+                            <div class="col2-title">Software Development Experience</div>
                         </div>
                     </div>
                     <div class="experience-grid">
