--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
                 <div class="sidebar-item">
                     <div class="sidebar-item-title">Email</div>
                     <div class="sidebar-item-subtitle">
-                        <a style="color:peachpuff;" href="mailto:gunnypari@gmail.com">gunnypari@gmail.com</a>
+                        <a style="color:peachpuff;" href="mailto:kaurgdeep4@gmail.com">kaurgdeep4@gmail.com</a>
+                    </div>
+                </div>
+                <div class="sidebar-item">
+                    <div class="sidebar-item-title">My Portfolio</div>
+                    <div class="sidebar-item-subtitle">
+                        <a style="color:peachpuff;" href="https://kaurgdeep.github.io/Dev_portfolio/">kaurgdeep.github.io/Dev_portfolio</a>
                     </div>
                 </div>
                 <div class="sidebar-item">
@@ -35,7 +41,7 @@
                 </div>
                 <div class="sidebar-title">Software</div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">HTML / CSS / LESS / SASS/ jQuery / VirtualEnv</div>
+                    <div class="sidebar-item-title">HTML / CSS / LESS / SASS/ jQuery </div>
                 </div>
                 <div class="sidebar-item">
                     <div class="sidebar-item-title">Python / C# / MEAN-Stack</div>
@@ -45,7 +51,7 @@
                     <div class="sidebar-item-title">Django / Bootstrap / Materialize / .NET Core / ASP.NET</div>
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">MVC / OOP / API's / AJAX </div>
+                    <div class="sidebar-item-title">MVC / OOP / API's </div>
                 </div>
                 <div class="sidebar-item">
                     <div class="sidebar-item-title">MySQL / PostgresSQL / MongoDB / Microsoft SQL</div>
@@ -55,7 +61,7 @@
                     <div class="sidebar-item-title">General Programming Skills</div>
                 </div>
                 <div class="sidebar-item">
-                    <div class="sidebar-item-title">Software Debugging</div>
+                    <div class="sidebar-item-title">Software Testing</div>
                 </div>
                 <div class="sidebar-item">
                     <div class="sidebar-item-title">Software Documentation</div>
@@ -96,7 +102,7 @@
                     <div class="main-item-title">Professional Experience</div>
                     <div class="experience-grid">
                         <div class="col1">
-                            <div>1 Year</div>
+                            <div>2 Year</div>
                         </div>
                         <div class="col2">
                             <div class="col2-title">Software Development Experience</div>
@@ -121,7 +127,7 @@
                                 </ul>
                             </div>
                     </div>
-                    <div class="main-item-title">Projects</div>
+                    <!-- <div class="main-item-title">Projects</div>
                     <div class="experience-grid">
                         <div class="col1"></div>
                         <div class="col2">
@@ -132,7 +138,7 @@
                                 <li>Technologies used - Python, Django, PostgresSQL, Heroku, Grid, LESS</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="main-item-title">Education</div>
                     <div class="experience-grid">
                         <div class="col1">
@@ -140,7 +146,7 @@
                             <div>Jul, 2018</div>
                         </div>
                         <div class="col2">
-                            <div class="col2-title">Web Developer / Coding-Dojo</div>
+                            <div class="col2-title">Software Developer / Coding-Dojo</div>
                             <div class="col2-location">Bellevue, WA</div>
                             <ul>
                                 <li>Coding Dojo is an immersive web development boot-camp specialized 
@@ -160,7 +166,7 @@
                             <div>Apr, 2011</div>
                         </div>
                         <div class="col2">
-                            <div class="col2-title">B.Sc(Computer Science)| Khalsa College</div>
+                            <div class="col2-title">B.Sc(Computer Science)</div>
                             <div class="col2-location">India</div>
                             <ul>
                                 <li>Major: mathematics, physics, chemistry </li>
@@ -168,7 +174,45 @@
                             </ul>
                         </div>
                     </div>
+                    
                     <div class="main-item-title">Experience</div>
+                    <div class="experience-grid">
+                        <div class="col1">
+                            <div>Nov, 2018 - </div>
+                            <div>Present</div>
+                        </div>
+                        <div class="col2">
+                            <div class="col2-title">SDET (Software Development Engineer in Test)</div>
+                            <div class="col2-location">Spectralux Avionics</div>
+                            <ul>
+                                <li>Designing, development, and testing. </li>
+                                <li>Automation testing.</li>
+                                <li>Manual testing and plan building skills.</li>
+                                <li>Preparing and executing the test cases.</li>
+                                <li>Experience in IBM Rational DOORS and configmaker.</li>
+                                <li>All responsibilities of test planning.</li>
+                                <li>Prepare the status report of testing activities.</li>
+                                <li>Develop test cases and prioritize testing activities.</li>
+                                <li>Conduct regression testing every time when changes are made to the code to fix defects.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="experience-grid">
+                        <div class="col1">
+                            <div>Sep, 2018 - </div>
+                            <div>Nov, 2018</div>
+                        </div>
+                        <div class="col2">
+                            <div class="col2-title">Teacher Assistant at Trilogy Education Services</div>
+                            <div class="col2-location">Bellevue, WA</div>
+                            <ul>
+                                <li>Solve the problems that students are having With the course material.</li>
+                                <li>Help students with HTML5, CSS3, JavaScript, jQuery, Bootstrap, Express.js, React.js, Node.js, 
+                                    MongoDB, MySQL, Command Line, Git and more. 
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     <div class="experience-grid">
                         <div class="col1">
                             <div>Apr, 2018 - </div>
@@ -229,7 +273,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div style="margin-top:15px" class="experience-grid">
+                    <!-- <div style="margin-top:15px" class="experience-grid">
                         <div class="col1">
                             <div>Jun, 2011 - </div>
                             <div>Jul, 2015</div>
@@ -243,7 +287,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                     
                     <div class="main-item-title">Other Skills</div>
                     <div class="experience-grid">
